<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="14dp"
        android:paddingBottom="36dp">

        <!-- FCM Token -->
        <TextView
            style="@style/SectionHeaderStyle"
            android:text="@string/fcm_token" />

        <TextView
            android:id="@+id/tv_fcm_token"
            style="@style/SectionItemStyle"
            android:drawablePadding="12dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/not_available"
            app:drawableEndCompat="@drawable/ic_copy_24"
            app:drawableStartCompat="@drawable/ic_firebase_24" />

        <!-- Device GUID -->
        <TextView
            style="@style/SectionHeaderStyle"
            android:layout_marginTop="1dp"
            android:text="@string/device_unique_id" />

        <TextView
            android:id="@+id/tv_guid"
            style="@style/SectionItemStyle"
            android:drawablePadding="12dp"
            android:text="@string/not_available"
            app:drawableEndCompat="@drawable/ic_copy_24"
            app:drawableStartCompat="@drawable/ic_verified_user_24" />

        <!-- Tracking Events -->
        <TextView
            style="@style/SectionHeaderStyle"
            android:layout_marginTop="10dp"
            android:text="@string/tracking_events" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGrey"
            android:orientation="horizontal"
            android:padding="1dp">

            <TextView
                android:id="@+id/tv_add_to_wish_list"
                style="@style/SectionItemStyle"
                android:layout_width="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:drawablePadding="8dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/add_to_wish_list"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/ic_heart_24" />

            <TextView
                android:id="@+id/tv_add_to_cart"
                style="@style/SectionItemStyle"
                android:layout_width="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:drawablePadding="8dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/add_to_cart"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/ic_add_shopping_cart_24" />

            <TextView
                android:id="@+id/tv_checkout"
                style="@style/SectionItemStyle"
                android:layout_width="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:drawablePadding="8dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/checkout"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/ic_check_24" />

        </LinearLayout>

        <!-- User Actions -->
        <TextView
            style="@style/SectionHeaderStyle"
            android:layout_marginTop="1dp"
            android:text="@string/tracking_users" />

        <TextView
            android:id="@+id/tv_update_profile"
            style="@style/SectionItemStyle"
            android:text="@string/update_profile"
            app:drawableStartCompat="@drawable/ic_account_circle_24" />

        <TextView
            android:id="@+id/tv_clear_identity"
            style="@style/SectionItemStyle"
            android:text="@string/clear_user_identity"
            app:drawableStartCompat="@drawable/ic_person_add_disabled_24" />

        <TextView
            android:id="@+id/tv_logout"
            style="@style/SectionItemStyle"
            android:text="@string/logout"
            app:drawableStartCompat="@drawable/ic_exit_24" />

        <!-- Advanced -->
        <TextView
            style="@style/SectionHeaderStyle"
            android:layout_marginTop="10dp"
            android:text="@string/advanced" />

        <TextView
            android:id="@+id/tv_appinox"
            style="@style/SectionItemStyle"
            android:drawablePadding="8dp"
            android:text="@string/app_inbox"
            app:drawableStartCompat="@drawable/ic_notifications_24" />

        <TextView
            android:id="@+id/tv_customappinox"
            style="@style/SectionItemStyle"
            android:drawablePadding="8dp"
            android:text="@string/custom_app_inbox"
            app:drawableStartCompat="@drawable/ic_notifications_24" />

        <TextView
            android:id="@+id/tv_set_location"
            style="@style/SectionItemStyle"
            android:drawablePadding="8dp"
            android:text="@string/set_location"
            app:drawableStartCompat="@drawable/ic_location_24" />

        <TextView
            android:id="@+id/tv_webview"
            style="@style/SectionItemStyle"
            android:drawablePadding="8dp"
            android:text="@string/web_view"
            app:drawableStartCompat="@drawable/ic_arrow_forward_24" />

        <TextView
            android:id="@+id/tv_list_in_list"
            style="@style/SectionItemStyle"
            android:drawablePadding="8dp"
            android:text="@string/list_in_list"
            app:drawableStartCompat="@drawable/ic_arrow_forward_24" />

        <!-- Opt-in switches -->
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_opt_pn"
            style="@style/SectionItemStyle"
            android:drawableStart="@drawable/ic_notifications_24"
            android:text="@string/opt_push_notifications" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_opt_in_app"
            style="@style/SectionItemStyle"
            android:drawableStart="@drawable/ic_comment_24"
            android:text="@string/opt_in_apps" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_opt_tracking"
            style="@style/SectionItemStyle"
            android:drawableStart="@drawable/ic_trending_up_24"
            android:text="@string/opt_tracking" />

    </LinearLayout>

</ScrollView>
