<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgradient"
    android:padding="20dp"
    tools:context=".RegisterScreen">

    <LinearLayout
        android:id="@+id/linearBodyReg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingHorizontal="20dp">

        <!-- Logo -->
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:src="@drawable/img_netcore"
            android:contentDescription="@string/img_netcore_description" />

        <!-- User Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:hintTextColor="@color/orange"

            app:boxStrokeColor="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/useremail"
                android:inputType="textEmailAddress"
                android:textColor="@color/blue"

                android:textColorHint="@color/orange"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:hintTextColor="@color/orange"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/blue"
                android:textColorHint="@color/orange"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusBottomEnd="12dp"
            app:hintTextColor="@color/orange"
            app:boxStrokeColor="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_field2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpassword"
                android:inputType="textPassword"
                android:textColor="@color/blue"
                android:textColorHint="@color/orange"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Register Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/reg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:cornerRadius="12dp"
            app:backgroundTint="@color/orange"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <!-- Login Text -->
        <TextView
            android:id="@+id/log_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/already_registered"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:textStyle="bold" />

        <!-- Login Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/log_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cornerRadius="12dp"
            app:backgroundTint="@color/orange"
            android:text="@string/login"
            android:backgroundTint="#4D4DFF"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>














































<!--
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ggradient"
    android:padding="20dp"
    tools:context=".RegisterScreen">

    <LinearLayout
        android:id="@+id/linearBodyReg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="-225dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/img_netcore" />

        <EditText
            android:id="@+id/user_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/useremail"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#4d4dff"
            android:textColorHint="	#ff8000" />

        <EditText
            android:id="@+id/pass_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#4d4dff"
            android:textColorHint="	#ff8000" />

        <EditText
            android:id="@+id/pass_field2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/cpassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#4d4dff"
            android:textColorHint="	#ff8000" />

        <Button
            android:id="@+id/reg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_background"
            android:backgroundTint="#ff8000"
            android:text="@string/register" />

        <TextView
            android:id="@+id/log_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Already registered? Click here:"
            android:textAlignment="center"
            android:textColor="#ff8000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/log_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:backgroundTint="#ff8000"
            android:text="@string/login" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>-->
